k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-explorer
  namespace: server-explorer
  labels:
    app.kubernetes.io/name: server-explorer
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: server-explorer
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30094
